--- a/docs/docs/llms/chat-model-guide/index.mdx
+++ b/docs/docs/llms/chat-model-guide/index.mdx
@@ -4,6 +4,10 @@ import { APILink } from "@site/src/components/APILink";
 
 # Tutorial: Custom GenAI Models using ChatModel
 
+:::warning attention
+Starting in MLflow 3.0.0, we recommend `ResponsesAgent` instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink>. See more details in the [ResponsesAgent Introduction](./respones-agent-intro).
+:::
+
 The rapidly evolving landscape of Generative Artificial Intelligence (GenAI) presents exciting opportunities and integration challenges.
 To leverage the latest GenAI advancements effectively, developers need a framework that balances flexibility with standardization.
 MLflow addresses this need with the <APILink fn="mlflow.pyfunc.ChatModel">`mlflow.pyfunc.ChatModel`</APILink> class introduced in
