--- a/docs/docs/llms/responses-agent-intro/index.mdx
+++ b/docs/docs/llms/responses-agent-intro/index.mdx
@@ -3,20 +3,20 @@ import { APILink } from "@site/src/components/APILink";
 # ResponsesAgent Introduction
 
 ## What is a ResponsesAgent?
-`ResponsesAgent` is a subclass of `PythonModel` that provides a framework-agnostic way to create an agent model. Authoring an agent using `ResponsesAgent` provides the following benefits:
+<APILink fn="mlflow.pyfunc.ResponsesAgent">`ResponsesAgent`</APILink> is a subclass of `PythonModel` that provides a framework-agnostic way to create an agent model. Authoring an agent using `ResponsesAgent` provides the following benefits:
 - Support for returning multiple output messages, including intermediate outputs from tool-calling
 - Support for multi-agent scenarios
 - Ensure compatibility with MLflow logging, tracing, and model serving
 - Ensure your model is compatible with OpenAI Responses API, making it compatible with OpenAI's responses client and other downstream UIs/applications
 
 
-We recommend `ResponsesAgent` instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink> and <APILink fn="mlflow.pyfunc.ChatAgent">`ChatAgent`</APILink>, as it has all the benefits of `ChatAgent` and and supports additional features like annotations.
+We recommend <APILink fn="mlflow.pyfunc.ResponsesAgent">`ResponsesAgent`</APILink> instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink> and <APILink fn="mlflow.pyfunc.ChatAgent">`ChatAgent`</APILink>, as it has all the benefits of `ChatAgent` and and supports additional features like annotations.
 
 
 ## Author a ResponsesAgent
 
 ### Getting started
-To create your own agent, subclass `mlflow.pyfunc.ResponsesAgent` and implement your agent logic in the `predict` method. The implementation is framework-agnostic, allowing you to use any agent authoring framework. Note that `pydantic>=2` is required to use ResponsesAgent. For a complete implementation example, see the [example below](#example).
+To create your own agent, subclass `mlflow.pyfunc.ResponsesAgent` and implement your agent logic in the `predict` method. The implementation is framework-agnostic, allowing you to use any agent authoring framework. Note that `pydantic>=2` is required to use ResponsesAgent. For a complete implementation example, see the [simple chat example](#simple-chat-example) and the [tool calling example](#tool-calling-example).
 
 ### Creating agent output
 When implementing your agent, you'll work with two main output types: `ResponsesAgentResponse` and `ResponsesAgentStreamEvent`. These are the only pydantic objects you should create directly. The remaining classes in `mlflow.types.responses_helpers` are only for validating dictionaries.
@@ -187,183 +187,6 @@ loaded_model.predict(
 ```
 
 
-## Example
-Here's an example of an agent that calls OpenAI's gpt-4o model with a simple tool.
-
-```python
-# uncomment below if running inside a jupyter notebook
-# %%writefile agent.py
-import json
-from typing import Any, Callable, Generator
-from uuid import uuid4
-
-import backoff
-import mlflow
-import openai
-from mlflow.entities import SpanType
-from mlflow.pyfunc import ResponsesAgent
-from mlflow.types.responses import (
-    ResponsesAgentRequest,
-    ResponsesAgentResponse,
-    ResponsesAgentStreamEvent,
-)
-from openai import OpenAI
-from pydantic import BaseModel
-
-
-class ToolInfo(BaseModel):
-    """
-    Class representing a tool for the agent.
-    - "name" (str): The name of the tool.
-    - "spec" (dict): JSON description of the tool (matches OpenAI Responses format)
-    - "exec_fn" (Callable): Function that implements the tool logic
-    """
-
-    name: str
-    spec: dict
-    exec_fn: Callable
-
-
-class ToolCallingAgent(ResponsesAgent):
-    """
-    Class representing a tool-calling Agent
-    """
-
-    def __init__(self, model: str, tools: list[ToolInfo]):
-        """Initializes the ToolCallingAgent with tools."""
-        self.model = model
-        self.client: OpenAI = OpenAI()
-        self._tools_dict = {tool.name: tool for tool in tools}
-
-    def get_tool_specs(self) -> list[dict]:
-        """Returns tool specifications in the format OpenAI expects."""
-        return [tool_info.spec for tool_info in self._tools_dict.values()]
-
-    @mlflow.trace(span_type=SpanType.TOOL)
-    def execute_tool(self, tool_name: str, args: dict) -> Any:
-        """Executes the specified tool with the given arguments."""
-        return self._tools_dict[tool_name].exec_fn(**args)
-
-    @backoff.on_exception(backoff.expo, openai.RateLimitError)
-    @mlflow.trace(span_type=SpanType.LLM)
-    def call_llm(self, input_messages) -> ResponsesAgentStreamEvent:
-        return (
-            self.client.responses.create(
-                model=self.model,
-                input=input_messages,
-                tools=self.get_tool_specs(),
-            )
-            .output[0]
-            .model_dump(exclude_none=True)
-        )
-
-    def handle_tool_call(self, tool_call: dict[str, Any]) -> ResponsesAgentStreamEvent:
-        """
-        Execute tool calls and return a ResponsesAgentStreamEvent w/ tool output
-        """
-        args = json.loads(tool_call["arguments"])
-        result = str(self.execute_tool(tool_name=tool_call["name"], args=args))
-
-        tool_call_output = {
-            "type": "function_call_output",
-            "call_id": tool_call["call_id"],
-            "output": result,
-        }
-        return ResponsesAgentStreamEvent(
-            type="response.output_item.done", item=tool_call_output
-        )
-
-    def call_and_run_tools(
-        self,
-        input_messages,
-        max_iter: int = 10,
-    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
-        for _ in range(max_iter):
-            last_msg = input_messages[-1]
-            if (
-                last_msg.get("type", None) == "message"
-                and last_msg.get("role", None) == "assistant"
-            ):
-                return
-            if last_msg.get("type", None) == "function_call":
-                tool_call_res = self.handle_tool_call(last_msg)
-                input_messages.append(tool_call_res.item)
-                yield tool_call_res
-            else:
-                llm_output = self.call_llm(input_messages=input_messages)
-                input_messages.append(llm_output)
-                yield ResponsesAgentStreamEvent(
-                    type="response.output_item.done",
-                    item=llm_output,
-                )
-
-        yield ResponsesAgentStreamEvent(
-            type="response.output_item.done",
-            item={
-                "id": str(uuid4()),
-                "content": [
-                    {
-                        "type": "output_text",
-                        "text": "Max iterations reached. Stopping.",
-                    }
-                ],
-                "role": "assistant",
-                "type": "message",
-            },
-        )
-
-    @mlflow.trace(span_type=SpanType.AGENT)
-    def predict(self, request: ResponsesAgentRequest) -> ResponsesAgentResponse:
-        outputs = [
-            event.item
-            for event in self.predict_stream(request)
-            if event.type == "response.output_item.done"
-        ]
-        return ResponsesAgentResponse(
-            output=outputs, custom_outputs=request.custom_inputs
-        )
-
-    @mlflow.trace(span_type=SpanType.AGENT)
-    def predict_stream(
-        self, request: ResponsesAgentRequest
-    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
-        input_messages = [{"role": "system", "content": SYSTEM_PROMPT}] + [
-            i.model_dump() for i in request.input
-        ]
-        yield from self.call_and_run_tools(input_messages=input_messages)
-
-
-tools = [
-    ToolInfo(
-        name="get_weather",
-        spec={
-            "type": "function",
-            "name": "get_weather",
-            "description": "Get current temperature for provided coordinates in celsius.",
-            "parameters": {
-                "type": "object",
-                "properties": {
-                    "latitude": {"type": "number"},
-                    "longitude": {"type": "number"},
-                },
-                "required": ["latitude", "longitude"],
-                "additionalProperties": False,
-            },
-            "strict": True,
-        },
-        exec_fn=lambda latitude, longitude: 70,  # dummy tool implementation
-    )
-]
-
-import os
-os.environ["OPENAI_API_KEY"] = "<openai api key>"
-
-SYSTEM_PROMPT = "You are a helpful assistant that can call tools to get information."
-mlflow.openai.autolog()
-AGENT = ToolCallingAgent(model="gpt-4o", tools=tools)
-mlflow.models.set_model(AGENT)
-```
-
 ## Migrating from `ChatAgent`
 
 When migrating from `ChatAgent` to `ResponsesAgent`, the primary task involves adapting your message formats from the ChatCompletion API to the Responses API schema. For detailed information about these changes, refer to the OpenAI documentation:
@@ -529,4 +352,231 @@ The `ResponsesAgent` interface extends all functionality previously available in
     "strict": true
   }
 }
+```
+
+## Simple Chat Example
+Here's an example of an agent that calls OpenAI's gpt-4o model with a simple tool:
+
+```python
+# uncomment below if running inside a jupyter notebook
+# %%writefile agent.py
+import os
+from typing import Generator
+
+import mlflow
+from mlflow.entities.span import SpanType
+from mlflow.models import set_model
+from mlflow.pyfunc.model import ResponsesAgent
+from mlflow.types.responses import (
+    ResponsesAgentRequest,
+    ResponsesAgentResponse,
+    ResponsesAgentStreamEvent,
+)
+from openai import OpenAI
+
+
+class SimpleResponsesAgent(ResponsesAgent):
+    def __init__(self, model: str):
+        self.client = OpenAI()
+        self.model = model
+
+    @mlflow.trace(span_type=SpanType.AGENT)
+    def predict(self, request: ResponsesAgentRequest) -> ResponsesAgentResponse:
+        response = self.client.responses.create(input=request.input, model=self.model)
+        return ResponsesAgentResponse(**response.to_dict())
+
+    @mlflow.trace(span_type=SpanType.AGENT)
+    def predict_stream(
+        self, request: ResponsesAgentRequest
+    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
+        for event in self.client.responses.create(
+            input=request.input, stream=True, model=self.model
+        ):
+            if (
+                event.type == "response.output_item.done"
+                or event.type == "response.output_text.delta"
+            ):
+                yield ResponsesAgentStreamEvent(**event.to_dict())
+
+
+agent = SimpleResponsesAgent(model="gpt-4o")
+set_model(agent)
+```
+
+
+## Tool Calling Example
+Here's an example of an agent that calls OpenAI's gpt-4o model with a simple tool:
+
+```python
+# uncomment below if running inside a jupyter notebook
+# %%writefile agent.py
+import json
+from typing import Any, Callable, Generator
+import os
+from uuid import uuid4
+
+import backoff
+import mlflow
+import openai
+from mlflow.entities import SpanType
+from mlflow.pyfunc import ResponsesAgent
+from mlflow.types.responses import (
+    ResponsesAgentRequest,
+    ResponsesAgentResponse,
+    ResponsesAgentStreamEvent,
+)
+from openai import OpenAI
+from pydantic import BaseModel
+
+
+class ToolInfo(BaseModel):
+    """
+    Class representing a tool for the agent.
+    - "name" (str): The name of the tool.
+    - "spec" (dict): JSON description of the tool (matches OpenAI Responses format)
+    - "exec_fn" (Callable): Function that implements the tool logic
+    """
+
+    name: str
+    spec: dict
+    exec_fn: Callable
+
+
+class ToolCallingAgent(ResponsesAgent):
+    """
+    Class representing a tool-calling Agent
+    """
+
+    def __init__(self, model: str, tools: list[ToolInfo]):
+        """Initializes the ToolCallingAgent with tools."""
+        self.model = model
+        self.client: OpenAI = OpenAI()
+        self._tools_dict = {tool.name: tool for tool in tools}
+
+    def get_tool_specs(self) -> list[dict]:
+        """Returns tool specifications in the format OpenAI expects."""
+        return [tool_info.spec for tool_info in self._tools_dict.values()]
+
+    @mlflow.trace(span_type=SpanType.TOOL)
+    def execute_tool(self, tool_name: str, args: dict) -> Any:
+        """Executes the specified tool with the given arguments."""
+        return self._tools_dict[tool_name].exec_fn(**args)
+
+    @backoff.on_exception(backoff.expo, openai.RateLimitError)
+    @mlflow.trace(span_type=SpanType.LLM)
+    def call_llm(self, input_messages) -> ResponsesAgentStreamEvent:
+        return (
+            self.client.responses.create(
+                model=self.model,
+                input=input_messages,
+                tools=self.get_tool_specs(),
+            )
+            .output[0]
+            .model_dump(exclude_none=True)
+        )
+
+    def handle_tool_call(self, tool_call: dict[str, Any]) -> ResponsesAgentStreamEvent:
+        """
+        Execute tool calls and return a ResponsesAgentStreamEvent w/ tool output
+        """
+        args = json.loads(tool_call["arguments"])
+        result = str(self.execute_tool(tool_name=tool_call["name"], args=args))
+
+        tool_call_output = {
+            "type": "function_call_output",
+            "call_id": tool_call["call_id"],
+            "output": result,
+        }
+        return ResponsesAgentStreamEvent(
+            type="response.output_item.done", item=tool_call_output
+        )
+
+    def call_and_run_tools(
+        self,
+        input_messages,
+        max_iter: int = 10,
+    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
+        for _ in range(max_iter):
+            last_msg = input_messages[-1]
+            if (
+                last_msg.get("type", None) == "message"
+                and last_msg.get("role", None) == "assistant"
+            ):
+                return
+            if last_msg.get("type", None) == "function_call":
+                tool_call_res = self.handle_tool_call(last_msg)
+                input_messages.append(tool_call_res.item)
+                yield tool_call_res
+            else:
+                llm_output = self.call_llm(input_messages=input_messages)
+                input_messages.append(llm_output)
+                yield ResponsesAgentStreamEvent(
+                    type="response.output_item.done",
+                    item=llm_output,
+                )
+
+        yield ResponsesAgentStreamEvent(
+            type="response.output_item.done",
+            item={
+                "id": str(uuid4()),
+                "content": [
+                    {
+                        "type": "output_text",
+                        "text": "Max iterations reached. Stopping.",
+                    }
+                ],
+                "role": "assistant",
+                "type": "message",
+            },
+        )
+
+    @mlflow.trace(span_type=SpanType.AGENT)
+    def predict(self, request: ResponsesAgentRequest) -> ResponsesAgentResponse:
+        outputs = [
+            event.item
+            for event in self.predict_stream(request)
+            if event.type == "response.output_item.done"
+        ]
+        return ResponsesAgentResponse(
+            output=outputs, custom_outputs=request.custom_inputs
+        )
+
+    @mlflow.trace(span_type=SpanType.AGENT)
+    def predict_stream(
+        self, request: ResponsesAgentRequest
+    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
+        input_messages = [{"role": "system", "content": SYSTEM_PROMPT}] + [
+            i.model_dump() for i in request.input
+        ]
+        yield from self.call_and_run_tools(input_messages=input_messages)
+
+
+tools = [
+    ToolInfo(
+        name="get_weather",
+        spec={
+            "type": "function",
+            "name": "get_weather",
+            "description": "Get current temperature for provided coordinates in celsius.",
+            "parameters": {
+                "type": "object",
+                "properties": {
+                    "latitude": {"type": "number"},
+                    "longitude": {"type": "number"},
+                },
+                "required": ["latitude", "longitude"],
+                "additionalProperties": False,
+            },
+            "strict": True,
+        },
+        exec_fn=lambda latitude, longitude: 70,  # dummy tool implementation
+    )
+]
+
+os.environ["OPENAI_API_KEY"] = "your OpenAI API key"
+
+SYSTEM_PROMPT = "You are a helpful assistant that can call tools to get information."
+mlflow.openai.autolog()
+AGENT = ToolCallingAgent(model="gpt-4o", tools=tools)
+mlflow.models.set_model(AGENT)
 ```
