--- a/docs/docs/llms/chat-model-intro/index.mdx
+++ b/docs/docs/llms/chat-model-intro/index.mdx
@@ -3,7 +3,7 @@ import { APILink } from "@site/src/components/APILink";
 # Tutorial: Getting Started with ChatModel
 
 :::warning attention
-Starting in MLflow 3.0.0, we recommend `ResponsesAgent` instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink>. See more details in the [ResponsesAgent Introduction](./respones-agent-intro).
+Starting in MLflow 3.0.0, we recommend <APILink fn="mlflow.pyfunc.ResponsesAgent">`ResponsesAgent`</APILink> instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink>. See more details in the [ResponsesAgent Introduction](/llms/responses-agent-intro).
 :::
 
 MLflow's <APILink fn ="mlflow.pyfunc.ChatModel">`ChatModel`</APILink> class provides a standardized way to create production-ready conversational AI models.
