--- a/docs/docs/llms/chat-model-guide/index.mdx
+++ b/docs/docs/llms/chat-model-guide/index.mdx
@@ -5,7 +5,7 @@ import { APILink } from "@site/src/components/APILink";
 # Tutorial: Custom GenAI Models using ChatModel
 
 :::warning attention
-Starting in MLflow 3.0.0, we recommend `ResponsesAgent` instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink>. See more details in the [ResponsesAgent Introduction](./respones-agent-intro).
+Starting in MLflow 3.0.0, we recommend <APILink fn="mlflow.pyfunc.ResponsesAgent">`ResponsesAgent`</APILink> instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink>. See more details in the [ResponsesAgent Introduction](/llms/responses-agent-intro).
 :::
 
 The rapidly evolving landscape of Generative Artificial Intelligence (GenAI) presents exciting opportunities and integration challenges.
