--- a/docs/docs/llms/responses-agent-intro/index.mdx
+++ b/docs/docs/llms/responses-agent-intro/index.mdx
@@ -147,8 +147,8 @@ Log your agent using the [Models-from-code](/model/models-from-code) approach. T
 ```python
 with mlflow.start_run():
     logged_agent_info = mlflow.pyfunc.log_model(
-        artifact_path="agent",
         python_model="agent.py",  # replace with your relative path to agent code
+        name="agent",
     )
 ```
 
@@ -399,6 +399,7 @@ class SimpleResponsesAgent(ResponsesAgent):
             yield ResponsesAgentStreamEvent(**event.to_dict())
 
 
+mlflow.openai.autolog()
 agent = SimpleResponsesAgent(model="gpt-4o")
 set_model(agent)
 ```
