--- a/docs/docs/model/index.mdx
+++ b/docs/docs/model/index.mdx
@@ -2324,6 +2324,9 @@ with mlflow.start_run() as run:
         targets="label",
         model_type="classifier",
         evaluators=["default"],
+        # Uncomment the following line to log the SHAP explainer used to compute the feature
+        # importance as a model
+        # evaluator_config={"log_explainer": True},
     )
 ```
 
