--- a/docs/docs/tracing/integrations/autogen.mdx
+++ b/docs/docs/tracing/integrations/autogen.mdx
@@ -9,14 +9,13 @@ import TOCInline from "@theme/TOCInline";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Tracing AutoGen🤖
+# Tracing AutoGen
 
-{/* TODO: rewrite this page for AutoGen 0.4 */}
-{/* ![AutoGen Tracing via autolog](/images/llms/autogen/autogen-trace.png) */}
+![AutoGen tracing via autolog](/images/llms/autogen/autogen-trace.png)
 
-[AutoGen](https://microsoft.github.io/autogen/0.2/) is an open-source framework for building event-driven, distributed, scalable, and resilient AI agent systems.
+[AutoGen AgentChat](https://microsoft.github.io/autogen/stable/index.html) is an open-source framework for building conversational single and multi-agent applications.
 
-[MLflow Tracing](../) provides automatic tracing capability for AutoGen, an open-source multi-agent framework. By enabling auto tracing
+[MLflow Tracing](../) provides automatic tracing capability for AutoGen AgentChat. By enabling auto tracing
 for AutoGen by calling the <APILink fn="mlflow.autogen.autolog" /> function, MLflow will capture nested traces and log them to the active MLflow Experiment upon agents execution.
 
 ```python
@@ -25,21 +24,38 @@ import mlflow
 mlflow.autogen.autolog()
 ```
 
-MLflow captures the following information about the multi-agent execution:
+:::note
 
-* Which agent is called at different turns
-* Messages passed between agents
-* LLM and tool calls made by each agent, organized per an agent and a turn
+Note that `mlflow.autogen.autolog` should be called after importing AutoGen classes. Otherwise, auto tracing will not be fully enabled.
+Also note that this integration is for AutoGen 0.5.7 or above. If you are using AutoGen 0.2, please use the [AG2 integration](./ag2) instead.
+
+:::
+
+MLflow captures the following information about the AutoGen agents:
+
+* Messages passed to agents including images
+* Responses from agents
+* LLM and tool calls made by each agent
 * Latencies
 * Any exception if raised
+
+### Supported APIs
+
+MLflow supports automatic tracing for the following AutoGen APIs.
+It does not support tracing for asynchronous generators. Asynchronous streaming APIs such as `run_stream` or `on_messages_stream` are not traced.
+
+- `ChatCompletionClient.create`
+- `BaseChatAgent.run`
+- `BaseChatAgent.on_messages`
 
 ### Basic Example
 
 ```python
 import os
-from typing import Annotated, Literal
 
-from autogen import ConversableAgent
+# Imports of autogen classes should happen before calling autolog.
+from autogen_agentchat.agents import AssistantAgent
+from autogen_ext.models.openai import OpenAIChatCompletionClient
 
 import mlflow
 
@@ -50,59 +66,58 @@ mlflow.autogen.autolog()
 mlflow.set_tracking_uri("http://localhost:5000")
 mlflow.set_experiment("AutoGen")
 
-
-# Define a simple multi-agent workflow using AutoGen
-config_list = [
-    {
-        "model": "gpt-4o-mini",
-        # Please set your OpenAI API Key to the OPENAI_API_KEY env var before running this example
-        "api_key": os.environ.get("OPENAI_API_KEY"),
-    }
-]
-
-Operator = Literal["+", "-", "*", "/"]
-
-
-def calculator(a: int, b: int, operator: Annotated[Operator, "operator"]) -> int:
-    if operator == "+":
-        return a + b
-    elif operator == "-":
-        return a - b
-    elif operator == "*":
-        return a * b
-    elif operator == "/":
-        return int(a / b)
-    else:
-        raise ValueError("Invalid operator")
-
-
-# First define the assistant agent that suggests tool calls.
-assistant = ConversableAgent(
-    name="Assistant",
-    system_message="You are a helpful AI assistant. "
-    "You can help with simple calculations. "
-    "Return 'TERMINATE' when the task is done.",
-    llm_config={"config_list": config_list},
+model_client = OpenAIChatCompletionClient(
+    model="gpt-4.1-nano",
+    # api_key="YOUR_API_KEY",
 )
 
-# The user proxy agent is used for interacting with the assistant agent
-# and executes tool calls.
-user_proxy = ConversableAgent(
-    name="Tool Agent",
-    llm_config=False,
-    is_termination_msg=lambda msg: msg.get("content") is not None
-    and "TERMINATE" in msg["content"],
-    human_input_mode="NEVER",
+agent = AssistantAgent(
+    name="assistant",
+    model_client=model_client,
+    system_message="You are a helpful assistant.",
 )
 
-# Register the tool signature with the assistant agent.
-assistant.register_for_llm(name="calculator", description="A simple calculator")(
-    calculator
+result = await agent.run(task="Say 'Hello World!'")
+print(result)
+```
+
+### Tool Agent
+
+```python
+import os
+
+# Imports of autogen classes should happen before calling autolog.
+from autogen_agentchat.agents import AssistantAgent
+from autogen_ext.models.openai import OpenAIChatCompletionClient
+
+import mlflow
+
+# Turn on auto tracing for AutoGen
+mlflow.autogen.autolog()
+
+# Optional: Set a tracking URI and an experiment
+mlflow.set_tracking_uri("http://localhost:5000")
+mlflow.set_experiment("AutoGen")
+
+model_client = OpenAIChatCompletionClient(
+    model="gpt-4.1-nano",
+    # api_key="YOUR_API_KEY",
 )
-user_proxy.register_for_execution(name="calculator")(calculator)
-response = user_proxy.initiate_chat(
-    assistant, message="What is (44231 + 13312 / (230 - 20)) * 4?"
+
+
+def add(a: int, b: int) -> int:
+    """add two numbers"""
+    return a + b
+
+
+agent = AssistantAgent(
+    name="assistant",
+    model_client=model_client,
+    system_message="You are a helpful assistant.",
+    tools=[add],
 )
+
+await agent.run(task="1+1")
 ```
 
 ### Disable auto-tracing
