--- a/docs/docs/tracing/integrations/index.mdx
+++ b/docs/docs/tracing/integrations/index.mdx
@@ -45,6 +45,9 @@ import TabItem from "@theme/TabItem";
   <SmallLogoCard link="/tracing/integrations/autogen">
     <span>![AutoGen Logo](/images/logos/autogen-logo.png)</span>
   </SmallLogoCard>
+  <SmallLogoCard link="/tracing/integrations/ag2">
+    <span>![AG2 Logo](/images/logos/ag2-logo.png)</span>
+  </SmallLogoCard>
   <SmallLogoCard link="/tracing/integrations/gemini">
     <span>![Gemini Logo](/images/logos/google-gemini-logo.svg)</span>
   </SmallLogoCard>
